--- a/test2.html
+++ b/test2.html
@@ -1,6 +1,8 @@
 <html id="html">
   <head id="head">
+    <title id="title">
+    </title>
   </head>
-  <body id="body">asdjhfad
+  <body id="body">
   </body>
 </html>
