--- a/output.html
+++ b/output.html
@@ -1,8 +1,11 @@
 <html id="html">
   <head id="head">
-    <title id="title">
-    </title>
+    
   </head>
+  <div id="div1">
+    content
+  </div>
   <body id="body">
+    fdlais
   </body>
 </html>
